documentação e lógica do collections controller
