# app/Models/Collection.php
@@ -10,18 +10,20 @@ class Collection extends Model
     use HasFactory;
 
     protected $fillable = [
-        
+            
     ];
 
-    public function user(){
-        return $this->belongsTo(User::class);
+    public function collectionMangas(){
+        return $this->hasMany(CollectionManga::class, 'collection_id');
     }
 
     public function mangas(){
-        return $this->belongsToMany(Manga::class, 'collection_manga');
+            return $this->belongsToMany(Manga::class, 'collection_manga', 'collection_id', 'manga_id'); 
     }
-    public function mangaVolumes(){
-        return $this->belongsToMany(MangaVolume::class, 'collection_volume');
+
+    public function volumes(){
+        return $this->hasManyThrough(CollectionVolume::class, CollectionManga::class, 'collection_id', 'collection_manga_id');
     }
+
     
 }
